fix contrast color

--- a/style.css
+++ b/style.css
@@ -220,6 +220,7 @@ thead th {
 
 tbody td {
   padding: 20px;
+  color: black;
 }
 
 /* Couleurs par cellule */
